# AW.ai_Ubuntu20.04

./: README.md
autoware_camera_lidar_calibrator/: CMakeLists.txt
autoware_camera_lidar_calibrator/launch/: camera_lidar_calibration.launch
autoware_camera_lidar_calibrator/nodes/: cameracalibrator.py
autoware_connector/: CMakeLists.txt
autoware_msgs/: CMakeLists.txt
calibration_publisher/: CMakeLists.txt
calibration_publisher/launch/: calibration_publisher.launch
detected_objects_visualizer/src/: visualize_rects.cpp
fastvirtualscan/: CMakeLists.txt
integrated_viewer/: CMakeLists.txt
integrated_viewer/lib/: convert_image.h
lanelet2_extension/: CMakeLists.txt
libwaypoint_follower/: CMakeLists.txt
lidar_euclidean_cluster_detect/: CMakeLists.txt
lidar_euclidean_cluster_detect/include/: gencolors.cpp
lidar_euclidean_cluster_detect/launch/: lidar_euclidean_cluster_detect.launch
lidar_kf_contour_track/: CMakeLists.txt
lidar_localizer-main/: CMakeLists.txt
lidar_point_pillars/: CMakeLists.txt
map_file/: CMakeLists.txt
op_global_planner/: CMakeLists.txt
op_local_planner/: CMakeLists.txt
op_planner/: CMakeLists.txt
op_ros_helpers/: CMakeLists.txt
op_simu/: CMakeLists.txt
plane_fit_ground_filter/: plane_ground_filter.launch  plane_ground_filter1.launch
points2image/: CMakeLists.txt
points_downsample/: CMakeLists.txt  package.xml
points_downsample/launch/: localizer.rviz  map_loader.launch  points_downsample.launch
points_preprocessor/: CMakeLists.txt
pure_pursuit/: CMakeLists.txt
range_vision_fusion/: CMakeLists.txt
rosinterface/: CMakeLists.txt
twist_filter/: CMakeLists.txt
twist_gate/: CMakeLists.txt
vision_darknet_detect/: CMakeLists.txt
(+36 files in other folders)
