<?xml version="1.0"?>
<package>
    <name>points_downsample</name>
    <version>1.2.3</version>
    <description>The ndt_localizer package</description>
    <maintainer email="leo_1@163.com">leofansq</maintainer>
    <license>Apache2</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>

    <build_depend>geometry_msgs</build_depend>
 
    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>pcl_conversions</run_depend>
  
    <run_depend>geometry_msgs</run_depend>


</package>
